fix width when showing scrollbar

--- a/event-planner-front/src/index.css
+++ b/event-planner-front/src/index.css
@@ -28,6 +28,10 @@ body {
     background-color: var(--background-white);
 }
 
+#root {
+    width: calc(100vw - 15px);
+}
+
 ul {
     list-style: none;
 }
